@@ -1,3 +1,9 @@
+2007-04-30  Vincent Untz  <vuntz@gnome.org>
+
+	* panel-util.[ch]: (missing_pixbuf): unused => kill
+	* menu.c: remove useless include
+	(menus_have_icons_changed): remove useless code
+
 ==================== 2.18.1 ====================
 
 2007-04-10  Vincent Untz  <vuntz@gnome.org>
